# handlers/selfCheck.go
@@ -13,7 +13,7 @@ import (
 // @Produce      json
 // @Param       object body models.RunModelRequest true "模型运行请求(现在是一些必选项, 后续可以传入自定义的阈值等要求)"
 // @Success 200 object models.RunModelResp "运行结果"
-// @Router       /run [post]
+// @Router       /selfcheck [post]
 func SelfCheckHandler(c *gin.Context) {
 	ip := config.GlobalConfig.GetString("db.ip")
 	r := fmt.Sprintf("http://%s:5001/selfcheck", ip)
